--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"@remotion/renderer": "^2.0.0",
 		"@types/express": "^4.17.9",
 		"@types/react": "^17.0.0",
+		"@types/styled-components": "^5.1.9",
+		"axelra-styled-bootstrap-grid": "^0.7.0",
 		"eslint": "^7.15.0",
 		"express": "^4.17.1",
 		"prettier": "^2.2.1",
@@ -25,6 +27,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"remotion": "^2.0.0",
+		"styled-components": "^5.2.3",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.2.3"
 	}
